# GameGraph

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes_concept.py  routes_graph.py  routes_import.py  routes_opportunity.py  routes_profile.py  sse.py
backend/app/fixtures/: element_roles.json  golden_flow.json  synergy_rules.json
backend/app/fixtures/games/: among_us.json  animal_well.json  apokerlypse.json  as_far_as_the_eye.json  astral_ascent.json  astrea_six_sided_oracles.json  astroneer.json  atomicrops.json  backpack_battles.json  balatro.json  banners_of_ruin.json  battleblock_theater.json  before_we_leave.json  beneath_oresa.json  beyond_two_souls.json  bioshock_infinite.json  black_book.json  black_jacket.json  blasphemous.json  (+145 more)
backend/app/graph/: connection.py  game_repository.py  opportunity_repository.py
backend/app/schemas/: __init__.py  artifacts.py  common.py  developer_profile.py  graph.py  import_document.py  opportunity.py
backend/app/services/: __init__.py  concept_llm.py  concept_service.py  developer_profile_parser.py  fixture_pipeline.py  graph_query.py  import_service.py  llm_client.py  opportunity_frame_llm.py  opportunity_frame_service.py  opportunity_llm.py  opportunity_service.py  profile_llm.py  profile_parse_service.py  synergy.py
backend/scripts/: import_games.py  reseed_games.py
backend/tests/: sse_helpers.py  test_artifact_contracts.py  test_concept_api.py  test_concept_llm.py  test_concept_service.py  test_cors.py  test_developer_profile_contracts.py  test_developer_profile_parser.py  test_fixture_pipeline.py  test_game_import_document.py  test_game_repository_integration.py  test_games_list_api.py  test_graph_api.py  test_graph_query.py  test_hybrid_validation.py  test_import_api.py  test_import_service.py  test_llm_client.py  test_opportunity_api.py  test_opportunity_enumeration.py  test_opportunity_frame_api.py  test_opportunity_frame_llm.py  test_opportunity_frame_service.py  test_opportunity_llm.py  test_opportunity_repository_integration.py  test_opportunity_schemas.py  test_opportunity_service.py  test_profile_api.py  test_profile_llm.py  test_profile_parse_service.py  test_project_structure.py  test_sse.py  test_synergy.py
(+149 files in other folders)
