[project]
name = "gamegraph-backend"
version = "0.1.0"
description = "Backend contract slice for the GameGraph fixture pipeline"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
