[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamegraph-backend"
version = "0.1.0"
description = "Backend contract slice for the GameGraph fixture pipeline"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "neo4j>=5.20,<6",
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

# Non-Python data the app reads at runtime / via the seed script. Without this,
# `pip install .` (Dockerfile) builds a wheel with only .py files, so synergy.py's
# runtime read of app/fixtures/*.json fails in site-packages with FileNotFoundError.
# Keep in sync with anything that loads from app/fixtures/.
[tool.setuptools.package-data]
app = ["fixtures/*.json", "fixtures/games/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests that require a running Neo4j instance (deselected by default)",
]
addopts = "-m 'not integration'"
